# chatops-guard

./: .gitignore  .tflint.hcl  AGENTS.md  LICENSE  README.md  code_review.md  plan.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: app-summariser.yaml  cd.yaml  ci.yaml  pr-quality.yaml  tf-destroy.yaml  tf-drift.yaml  tf-plan-apply.yaml  tf-unit-tests.yaml
apps/summariser/: .dockerignore  Dockerfile  README.md  pyproject.toml
apps/summariser/src/chatops_guard_summariser/: __init__.py  main.py  models.py  service.py
apps/summariser/tests/: test_api_contract.py  test_service.py
docs/: TODO.md  azure-oidc-least-privilege.md  terraform-architecture.md
docs/wiki/: Home.md
infra/envs/dev/: .terraform.lock.hcl  backend.tf  main.tf  provider.tf  var.tf
infra/envs/dev-platform/: .terraform.lock.hcl  backend.tf  main.tf  outputs.tf  provider.tf  terraform.tfvars.example  var.tf
infra/envs/prod/: backend.tf  main.tf  provider.tf
infra/modules/acr/: main.tf  outputs.tf  variables.tf
infra/modules/aks/: main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/event-grid/: main.tf  outputs.tf  variables.tf
infra/modules/network/: main.tf  outputs.tf  variables.tf  versions.tf
scripts/: init_infra.sh  local_validate.sh
skills/docker-hardening/: SKILL.md
skills/github-actions-review/: SKILL.md
skills/learn-while-building/: SKILL.md
skills/release-docs/: SKILL.md
skills/terraform-review/: SKILL.md
